finishing topics controller and view

--- a/Udemy/Views/Shared/_Footer.cshtml
+++ b/Udemy/Views/Shared/_Footer.cshtml
@@ -1,4 +1,4 @@
-﻿<footer class="container-fluid bg-dark fixed-bottom py-3">
+﻿<footer class="container-fluid bg-dark  py-3 ">
     <div class="row text-center">
         <div class="col">
             <ul class="navbar-nav">
