--- a/Udemy/Views/Shared/_Layout.cshtml
+++ b/Udemy/Views/Shared/_Layout.cshtml
@@ -10,18 +10,18 @@
     <link rel="stylesheet" href="~/Udemy.styles.css" asp-append-version="true" />
 </head>
 <body>
-    <partial name="_Header"></partial>
+
+    <partial name="_Header"/>
+
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
     </div>
-    <partial name="_footer"> </partial>
-    @*<footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2023 - Udemy - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
-    </footer>*@
+
+    <partial name="_Footer"/>
+    <partial name="_Modal" />
+
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
