finishing category controller and view

--- a/Udemy/wwwroot/css/site.css
+++ b/Udemy/wwwroot/css/site.css
@@ -22,6 +22,11 @@ html {
     display: none; 
 }
 
+body {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
 footer {
     margin-top: auto;
 }
