adding buttons to home page

--- a/Udemy/Views/Home/Index.cshtml
+++ b/Udemy/Views/Home/Index.cshtml
@@ -4,5 +4,8 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+
+    <a class="btn btn-primary" asp-controller="Topics" asp-action="Index">Topics dashboard </a>
+    <a class="btn btn-secondary" asp-controller="Categories" asp-action="Index">Categories dashboard </a>
+    <a class="btn btn-warning text-white " asp-controller="Courses" asp-action="Create">Create Course </a>
 </div>
