--- a/Udemy/Views/Home/_TopCategories.cshtml
+++ b/Udemy/Views/Home/_TopCategories.cshtml
@@ -7,10 +7,10 @@
     <div class="row justify-content-between">
         @foreach (var category in Model)
         {
-            <a class="card col-md-3 col-sm-4 col-xs-6  p-0 border-0 text-decoration-none py-2" asp-controller="courses" asp-action="categories" asp-route-id="@category.Id">
+            <a class="card col-md-3 col-sm-4 col-xs-6  p-0 border-0 text-decoration-none py-2 px-2" asp-controller="courses" asp-action="categories" asp-route-id="@category.Id">
                 <div class="text-xs-center text-sm-start  ">
                     <img src="~/images/categories/@category.ImageName" 
-                         class="card-img-top category-img"
+                         class="card-img-top category-img w-100"
                          alt="No Image Available"
                          style="width:200px">
                 </div>
