--- a/Udemy/Views/Home/_Topics.cshtml
+++ b/Udemy/Views/Home/_Topics.cshtml
@@ -1,6 +1,5 @@
 ﻿@model IEnumerable<TopicViewModel>
 
-
 <div class="featured-cources border-outline">
 
     <ul class="nav nav-tabs" role="tablist" id="myTab">
@@ -27,16 +26,20 @@
     </ul>
 
 
-    <div class="tab-content" id="featured-courses-Content">
+    <div class="tab-content border border-top-0" id="featured-courses-Content">
         @foreach (var topic in Model)
         {
             <div class="tab-pane fade text-start" id="@topic.Name.Split(' ').FirstOrDefault()-tab-pane" role="tabpanel" aria-labelledby="@topic.Name.Split(' ').FirstOrDefault()-tab" tabindex="0">
                 <div class="tab-pan-content ps-4">
                     <h2>@topic.Name</h2>
-                    <p >@topic.Description</p>
+                    <p>@topic.Description</p>
                     <a class="btn btn-outline-dark " asp-controller="courses" asp-action="topics" asp-route-id="@topic.Id">@topic.Name</a>
-                </div>
 
+                    <div class="owl-carousel owl-theme">
+                        <div class="item"><h4>@topic.Id</h4></div>
+                    </div>
+
+                </div>
             </div>
         }
     </div>
