--- a/Udemy/Views/Courses/Details.cshtml
+++ b/Udemy/Views/Courses/Details.cshtml
@@ -23,6 +23,8 @@
             }
             <a href="#" class="btn btn-primary">Add To Cart <i class="bi bi-cart3"></i></a>
 
+    <a class="fw-bolder d-block mt-2" asp-controller="courses" asp-action="Edit" asp-route-id="@Model.Id">Edit Course</a>
+
         </div>
     </div>
 </div>
