--- a/Udemy/Views/Home/_TopCategories.cshtml
+++ b/Udemy/Views/Home/_TopCategories.cshtml
@@ -4,15 +4,17 @@
 }
 
 <div class="container">
+
+    <a class="fw-bolder" asp-controller="categories" asp-action="index"><i class="bi bi-plus-circle fw-bolder"></i>Add New Category</a>
     <div class="row justify-content-between">
         @foreach (var category in Model)
         {
             <a class="card col-md-3 col-sm-4 col-xs-6  p-0 border-0 text-decoration-none py-2 px-2" asp-controller="courses" asp-action="categories" asp-route-id="@category.Id">
                 <div class="text-xs-center text-sm-start  ">
-                    <img src="~/images/categories/@category.ImageName" 
-                         class="card-img-top category-img w-100"
-                         alt="No Image Available"
-                         style="width:200px">
+                    <img src="~/images/categories/@category.ImageName"
+                     class="card-img-top category-img w-100"
+                     alt="No Image Available"
+                     style="width:200px">
                 </div>
                 <div class="card-body p-0">
                     <h5 class="card-title text-xs-center text-sm-start  text-dark ">@category.Name</h5>
