--- a/Udemy/Views/Home/_Topics.cshtml
+++ b/Udemy/Views/Home/_Topics.cshtml
@@ -22,6 +22,9 @@
             </li>
 
         }
+        <li class="nav-item">
+            <a class="nav-link fw-bolder" asp-controller="topics" asp-action="index"><i class="bi bi-plus-circle fw-bolder"></i>Add New Topic</a>
+        </li>
 
     </ul>
 
@@ -37,6 +40,7 @@
 
                     <div class="owl-carousel owl-theme">
                         <div class="item"><h4>@topic.Id</h4></div>
+
                     </div>
 
                 </div>
