--- a/Udemy/Views/Home/_Topics.cshtml
+++ b/Udemy/Views/Home/_Topics.cshtml
@@ -38,10 +38,11 @@
                     <p>@topic.Description</p>
                     <a class="btn btn-outline-dark " asp-controller="courses" asp-action="topics" asp-route-id="@topic.Id">@topic.Name</a>
 
-                    <div class="owl-carousel owl-theme">
+                    @*<div class="owl-carousel owl-theme">
                         <div class="item"><h4>@topic.Id</h4></div>
+                    </div>*@
 
-                    </div>
+                        <p class="text-danger pt-4 fw-bolder">this section is under construction :) </p>
 
                 </div>
             </div>
