--- a/Udemy/Views/Shared/_Header.cshtml
+++ b/Udemy/Views/Shared/_Header.cshtml
@@ -34,14 +34,13 @@
                         <a class="nav-link active" href="#" aria-current="page" href="#"> <i class="bi bi-cart3"></i></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="#" aria-current="page" href="#">
-                            <button type="button" class="btn btn-outline-dark">Log In</button>
-                            </i>
-                        </a>
+                        <form class="form-inline" asp-area="Identity" asp-page="/Account/Login" asp-route-returnUrl="/">
+                            <button type="submit" class="btn btn-outline-dark">Login</button>
+                        </form>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#"> <button type="button" class="btn btn-dark">Sin Up</button></i></a>
-                    </li>
+                    <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="/">
+                        <button type="submit" class="btn btn-outline-dark">Logout</button>
+                    </form>
 
 
                 </ul>
